--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "vben-admin",
   "version": "2.8.0",
   "author": {
-    "name": "vben",
-    "email": "anncwb@126.com",
+    "name": "1548478688@qq.com",
+    "email": "zy1548478688@qq.com",
     "url": "https://github.com/anncwb"
   },
   "scripts": {
@@ -41,6 +41,7 @@
     "@zxcvbn-ts/core": "^1.0.0-beta.0",
     "ant-design-vue": "2.2.8",
     "axios": "^0.24.0",
+    "cropperjs": "^1.5.13",
     "crypto-js": "^4.1.1",
     "echarts": "^5.2.2",
     "lodash-es": "^4.17.21",
@@ -54,6 +55,7 @@
     "resize-observer-polyfill": "^1.5.1",
     "sortablejs": "^1.14.0",
     "vue": "^3.2.21",
+    "vue-demi": "^0.14.5",
     "vue-i18n": "^9.1.9",
     "vue-router": "^4.0.12",
     "vue-types": "^4.1.1"
