--- a/package.json
+++ b/package.json
@@ -108,6 +108,7 @@
     "postcss": "^8.3.11",
     "postcss-html": "^1.2.0",
     "postcss-less": "^5.0.0",
+    "postcss-syntax": "^0.36.2",
     "prettier": "^2.4.1",
     "rimraf": "^3.0.2",
     "rollup-plugin-visualizer": "^5.5.2",
